测试ide的git功能

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
+
+<style type="text/css">
+
+ p{
+     font-family: Consolas;
+     font-size: 16px;
+     text-decoration: blink;
+
+ }
+</style>
 <h1>test gitpages</h1>
 
 <h3>haha</h3>
 <p>pagram</p>
 
 <h3>list</h3>
+<script type="application/javascript">
+    for (var i = 0; i < array.length; i++) {
+        var obj = array[i];
+        
+    }
 
+
+</script>
 
 
 <h2>h2test</h2>
+<div class="" id="" >
 
+</div>
+<div class="a">
+    <p><span class="b">         </span></p>
+    <p><span class="b">         </span></p>
+    <p><span class="b">         </span></p>
+    <p><span class="b">         </span></p          >
+    <p><span class="b">         </span></p>
+</div>
 
 <span>this is element span</span>
