--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
 <p>pagram</p>
 
 <h3>list</h3>
-<script type="application/javascript">
-    for (var i = 0; i < array.length; i++) {
-        var obj = array[i];
-        
-    }
 
 
-</script>
+<iframe width="100%" height="300" src="//jsfiddle.net/reZs4/33/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
 
+<iframe style="overflow: scroll;border:0px; padding:0px; margin:0px; width:100%; height:285px" src="https://cg.tutorialspoint.com/embed/4Y5yGNkT/250/e7e7e7"></iframe>
+
+
+<a href="https://cg.tutorialspoint.com/embed/2638/7bwlC6AV" target="_blank" rel="nofollow">Live Demo</a>
 <h2>h2test</h2>
 <div class="" id="" >
 
