Revert "完成第一个demo"
This reverts commit 726f853460ffc2fe65ec0f8a969be15fbd59a3ab.

--- a/index.html
+++ b/index.html
@@ -1,66 +1,38 @@
 
-	同级 +
-	缩写div+div
-	<div></div>
-	<div></div>
-	
-	
-	回到上一级 ^
-	缩写 div>p^div
-	<div>
-		<p></p>
-	</div>
-	<div></div>
-	
+<style type="text/css">
 
-	自定义属性
-	p[name=tcl title=test]
-	<p name="tcl" title="test"></p>
-	
-	id和class
-	缩写: #id.class.
-	<div id="id" class="class"></div>
-	
-	
-	文本
-	缩写：span{test}
-	<span>test</span>
-	
-	
-	隐式标签
-	缩写：.class
-	<div class="class"></div>
-	缩写：p>.class
-	<p><span class="class"></span></p>
-	缩写：p+.class
-	<p></p>
-	<div class="class"></div>
-	缩写: ul>.class
-	<ul>
-		<li class="class"></li>
-	</ul>
-	缩写：table>.row>.col
-	<table>
-		<tr class="row">
-			<td class="col"></td>
-		</tr>
-	</table>
-	
-	综合实战
-	ul>li>a[href=http://wwww.baidu.com]*3>div>i.icon-beer+^div>span{百度}
-	<ul>
-		<li>
-			<a href="http://wwww.baidu.com">
-				<div><i class="icon-beer"></i></div>
-				<div><span>百度</span></div>
-			</a>
-			<a href="http://wwww.baidu.com">
-				<div><i class="icon-beer"></i></div>
-				<div><span>百度</span></div>
-			</a>
-			<a href="http://wwww.baidu.com">
-				<div><i class="icon-beer"></i></div>
-				<div><span>百度</span></div>
-			</a>
-		</li>
-	</ul>
+ p{
+     font-family: Consolas;
+     font-size: 16px;
+     text-decoration: blink;
+
+ }
+</style>
+<h1>test gitpages</h1>
+
+<h3>haha</h3>
+<p>pagram</p>
+
+<h3>list</h3>
+
+
+<iframe width="100%" height="300" src="//jsfiddle.net/reZs4/33/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+
+
+<iframe style="overflow: scroll;border:0px; padding:0px; margin:0px; width:100%; height:285px" src="https://cg.tutorialspoint.com/embed/4Y5yGNkT/250/e7e7e7"></iframe>
+
+
+<a href="https://cg.tutorialspoint.com/embed/2638/7bwlC6AV" target="_blank" rel="nofollow">Live Demo</a>
+<h2>h2test</h2>
+<div class="" id="" >
+
+</div>
+<div class="a">
+    <p><span class="b">         </span></p>
+    <p><span class="b">         </span></p>
+    <p><span class="b">         </span></p>
+    <p><span class="b">         </span></p          >
+    <p><span class="b">         </span></p>
+</div>
+
+<span>this is element span</span>
